# dox2txt

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: core.rs  main.rs  main_logic.rs  tools.rs
