[package]
name = "dox2txt"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow = "1"
zip = "5.1"
roxmltree = "0.21"
rtf-parser = { git = "https://github.com/hardglitch/rtf-parser.git", branch = "master" }
scraper = "0.24"
walkdir = "2"
chardetng = "0.1"
encoding_rs = "0.8"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
